--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-display: swap; 
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/nunito-v26-cyrillic_latin-regular.woff2') format('woff2'); 
+}
+@font-face {
+  font-display: swap; 
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 700;
+  src: url('../fonts/nunito-v26-cyrillic_latin-700.woff2') format('woff2'); 
+}
+
 html {
   box-sizing: border-box;
 }
@@ -6,4 +21,342 @@ html {
 *::before,
 *::after {
   box-sizing: inherit;
+}
+
+body {
+  min-width: 320px;
+  min-height: 100vh;
+  font-family: Nunito, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  -webkit-tap-highlight-color: rgba(0,0,0,0) ;
+  -webkit-tap-highlight-color: transparent;
+  font-size: 16px;
+  line-height: 1.4;
+  color: #221F1F;
+}
+
+.body--gift {
+  background: #B2E8E8 url(../img/bg-gift.jpg) center/cover;
+}
+
+.body--congratulation {
+  background: #FCC5BD url(../img/bg-congratulation.jpg) center/cover;
+}
+
+.container {
+  max-width: 1260px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+
+
+.header {
+  padding: 40px 0;
+}
+
+.header__logo {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.gift {
+  padding: 20px 0 80px;
+}
+
+.gift__title {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.2;
+  margin: 0 0 16px;
+}
+
+.gift__description {
+  font-size: 20px;
+  margin: 0 0 50px;
+}
+.gift__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 96px;
+}
+
+.gift__card {
+  max-width: 580px;
+  width: calc(50% - 16px);
+}
+
+.gift__swiper--card {
+  margin-bottom: 20px;
+}
+
+.gift__card-slide {
+  border-radius: 20px;
+  border: 2px solid #4BAA00;
+  overflow: hidden;
+  box-sizing: border-box;
+}
+
+.gift__card-image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.gift__card-thumb {
+  width: 72px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.gift__form {
+  max-width: 480px;
+  width: 100%;
+}
+.form {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16px;
+  justify-items: start;
+}
+.form__label {
+  width: 100%;
+}
+.form__label-text {
+  display: block;
+  margin-bottom: 4px;
+  white-space: nowrap;
+}
+.form__field {
+  width: 100%;
+  font: inherit;
+  border-radius: 6px;
+  border: 1px solid #DEDEDE;
+  background-color: #FBFBFB;
+  padding: 8px 16px;
+  outline: none;
+}
+
+.form__field:hover,
+.form__field:focus-visible,
+.form__field:active {
+  border-color: #999;
+}
+.form__label--textarea {
+  grid-column: 1 / -1;
+}
+.form__field--textarea {
+  resize: vertical;
+  min-height: 150px;
+}
+.form__button {
+  border-radius: 32px;
+  background-color: #4BAA00;
+  border: 1px solid transparent;
+  cursor: pointer;
+  color: #FFF;
+  font-weight: 700;
+  padding: 8px 24px;
+}
+
+.form__button:hover:not(:disabled) {
+  background-color: #58C601;
+
+} 
+.form__button:focus-visible {
+  border-color: #58C601;
+} 
+.form__button:active:not(:disabled) {
+  transform: translate(2px, 2px);
+} 
+.form__button:disabled {
+  opacity: 0.4;
+} 
+
+.congratulation {
+  padding-top: 20px;
+  padding-bottom: 145px;
+}
+
+.congratulation__title {
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.2; 
+  margin: 0 0 16px;
+}
+.congratulation__description {
+  text-align: center;
+  font-size: 20px;
+  margin: 0 0 50px;
+
+}
+.congratulation__card {
+  margin: 0 auto;
+}
+.card {
+  position: relative;
+  max-width: 580px;
+  height: 375px;
+  perspective: 1000px;
+}
+.card__inner {
+  transform-style: preserve-3d;
+  transition: transform 1s;
+  width: 100%;
+  height: 100%;
+}
+
+.card:hover .card__inner {
+  transform: rotateY(180deg);
+}
+
+.card__front {
+  position: absolute;
+  inset: 0;
+  backface-visibility: hidden;
+  border-radius: 20px;
+  overflow: hidden;
+}
+
+.card__image {
+  display: block;
+  max-width: 100%;
+  height: auto;
+  border-radius: 20px;
+  overflow: hidden;
+}
+.card__back {
+  position: absolute;
+  backface-visibility: hidden;
+  border-radius: 20px;
+  inset: 0;
+  padding: 32px;
+  background-color: #FFF;
+  transform: rotateY(180deg);
+}
+.card__title {
+  color: #F44;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 1.2;
+  margin: 0 0 24px;
+}
+.card__contacts {
+  margin-bottom: 24px;
+}
+.card__detail {
+  display: flex;
+  gap: 16px;
+  margin: 0 0 8px;
+}
+
+.card__detail:last-child {
+  margin-bottom: 0;
+}
+
+.card__subtitle {
+  opacity: 0.3;
+  min-width: 54px;
+}
+
+
+.card__message {
+  font-size: 20px;
+  margin: 0;
+}
+
+@media (width <= 1080px) {
+  .header {
+    padding: 32px 0 16px;
+  }
+  .gift {
+    padding: 16px 0 34px;
+  }
+
+  .gift__title {
+    font-size: 28px;
+    margin-bottom: 12px;
+  }
+  
+  .gift__description {
+    font-size: 16px;
+    margin-bottom: 24px;
+  }  
+
+  .gift__card {
+    max-width: 464px;
+    width: 100%;
+    padding-top: 8px;
+  }
+
+  .form {
+    row-gap: 12px;
+  }
+  .congratulation__title {
+    font-size: 28px;
+    margin-bottom: 12px;
+  }
+
+  .congratulation__description {
+    font-size: 16px;
+    margin-bottom: 32px;
+  }
+}
+@media (width <= 980px) {
+  .container {
+    padding: 0 44px;
+
+  }
+  .gift__wrapper {
+    flex-wrap: wrap;
+
+  }
+  .gift__form{
+    max-width: 100%;
+  }
+}
+
+@media (width <= 580px) {
+  .container {
+    padding: 0 16px;
+  }
+
+  .header {
+    padding-top: 24px;
+  }
+  .form {
+    grid-template-columns: 1fr;
+  }
+  .gift__card-thumb {
+    width: 56px;
+    border-radius: 4px;
+  }
+
+  .card {
+    height: calc((186 / 288 * 100vw) - 20px);
+    margin-bottom: 20px;
+  }
+
+  .card__back {
+    padding: 24px;
+  }
+
+  .card__title {
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+
+  .card__message {
+    font-size: 16px;
+  }
+
+  .card__contacts {
+    margin-bottom: 0;
+  }
+  .card__subtitle {
+    opacity: 0.5;
+  }
 }
